# TFM_Balsas

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
balsas/: __init__.py  dataset.py  features.py  plots.py
balsas/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 01 Preprocesado de Datos Vectoriales.ipynb  03 Análisis Exploratorio de Datos (EDA).ipynb  04 Preparación de Datos de Entrenamiento.ipynb  05 Preparación del Dataset y Entrenamiento con Yolov8.ipynb  06 Entrenamiento y Validación del Modelo (Google Colab).ipynb  07 Inferencia y Evaluación del Modelo.ipynb
