[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "balsas"
version = "0.0.1"
description = "clasificacion de balsas de riego en la cuenca del guadalquivir"
authors = [
  { name = "Carlos" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9.21"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["balsas"]
force_sort_within_sections = true
